# bazel-flags

./: .bazelrc  .gitignore  .test.bazelrc  BUILD  MODULE.bazel  projectview.bazelproject
bazel/: BUILD  versions.bzl
bazel/7.5.0/: export-flags.patch
bazel/8.0.1/: BUILD  export-flags.patch
src/main/kotlin/: BUILD.bazel
src/main/kotlin/generator/: Flag.kt  Main.kt  overrides.kt
src/main/proto/: BUILD.bazel  bazel_flags.proto
