module(name = "bazel-flags")

bazel_dep(name = "rules_kotlin", version = "2.0.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "rules_jvm_external", version = "6.5")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.github.ajalt.clikt:clikt-core-jvm:5.0.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "bazel_7.4.1",
    integrity = "sha256-6vNOiW0AaUm0X7hlNwcUTcoSI4FMQlnPK0lMa9BKbYk=",
    url = "https://github.com/bazelbuild/bazel/archive/refs/tags/7.4.1.tar.gz",
)

http_file(
    name = "bazel_7.5.0",
    integrity = "sha256-XK6pw/kHmNotiL3AFVP/6lQTDQFX7iA9KOajqvhUspo=",
    url = "https://github.com/bazelbuild/bazel/archive/refs/tags/7.5.0.tar.gz",
)

http_file(
    name = "bazel_8.0.1",
    integrity = "sha256-1RkOrSf1u0LkcI0rr9R4NWU5VzYSlR+AiGMmW/9xBOQ=",
    url = "https://github.com/bazelbuild/bazel/archive/refs/tags/8.0.1.tar.gz",
)

http_file(
    name = "bazel_8.1.0",
    integrity = "sha256-vCtAyeS/4X3WDirf9H+tdaNHiLmzSW5PhJbjcwBm22k=",
    url = "https://github.com/bazelbuild/bazel/archive/refs/tags/8.1.0.tar.gz",
)
